# snake_rl

./: .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  snake-rl-spec.md  snake.py
.github/workflows/: ci.yml
config/: default.yaml
models/: snake_ppo_config.yaml
notebooks/: run_analysis.ipynb
scripts/: record_gif.py
src/snake_rl/: core.py  env.py  heuristic.py  main.py  policy.py  rendering.py  streamlit_app.py  train.py
tests/: test_core.py  test_env.py  test_heuristic.py  test_policy.py  test_record_gif.py
