[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-rl"
version = "0.1.0"
description = "RL agent for Snake — custom PyTorch MLP + SB3 PPO"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.2",
    "numpy>=1.26",
    "pygame>=2.5",
    "mlflow>=2.13",
    "pyyaml>=6.0",
    "streamlit>=1.35",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "pylint>=3.2",
]

[project.scripts]
snake-rl = "snake_rl.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=snake_rl --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["snake_rl"]
omit = [
    "src/snake_rl/rendering.py",
    "src/snake_rl/streamlit_app.py",
    "src/snake_rl/main.py",
    "src/snake_rl/train.py",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pylint.messages_control]
disable = ["R", "C"]

[tool.pylint.typecheck]
generated-members = ["pygame.*"]
